--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="MakeMyTrip Web site created using react" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>MakeMyTrip</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
